<resources>
    <string name="app_name">Games Clock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_chose_game">PLEASE, CHOSE THE GAME…</string>
    <string name="logoscrabble">logoscrabble</string>
    <string name="logorummy">logorummy</string>
    <string name="players_spinner">Players</string>
    <string name="raimon_ch">&#160;Raimon</string>
    <string name="santi_ch">&#160;Santi</string>
    <string name="cris_b_ch">&#160;Cris B</string>
    <string name="pare_ch">&#160;Pare</string>
    <string name="mare_ch">&#160;Mare</string>
    <string name="cris_s_ch">&#160;Cris S</string>
    <string name="pere_ch">&#160;Pere</string>
    <string name="invitat_1_ch">&#160;Guest 1</string>
    <string name="invitat_2_ch">&#160;Guest 2</string>
    <string name="raimon">&#160;&#160;Raimon&#160;&#160;</string>
    <string name="santi">&#160;&#160;Santi&#160;&#160;</string>
    <string name="cris_b">&#160;&#160;Cris B&#160;&#160;</string>
    <string name="pare">&#160;&#160;Pare&#160;&#160;</string>
    <string name="mare">&#160;&#160;Mare&#160;&#160;</string>
    <string name="cris_s">&#160;&#160;Cris S&#160;&#160;</string>
    <string name="pere">&#160;&#160;Pere&#160;&#160;</string>
    <string name="invitat_1">&#160;&#160;Guest 1&#160;&#160;</string>
    <string name="invitat_2">&#160;&#160;Guest 2&#160;&#160;</string>
    <string name="button_player_3">Button Player 3</string>
    <string name="button_player_1">Button Player 1</string>
    <string name="button_player_2">Button Player 2</string>
    <string name="button_player_4">Button Player 4</string>
    <string name="time">TIME:</string>
    <string name="checkboxe_snackbar">Select between 2 and 4 checkboxes</string>
    <string name="select_time">Please, introduce the time</string>
    <string name="minim_time">The minim time is 60 seconds</string>
    <string name="start">start</string>
    <string name="end_game">end game</string>
    <string name="select_game">SELECT GAME</string>
    <string name="rummy_stadistics">RUMMY STADISTICS</string>
    <string name="scrabble_stadistis">SCRABBLE STADISTIS</string>
    <string name="come_back">COME BACK</string>
    <string name="retry">Retry</string>
</resources>