<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".rummikub.RummyFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="293dp"
                android:layout_height="340dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toTopOf="@+id/bttnEndGame"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/bttnPlayer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_player_3"
                    app:layout_column="0"
                    app:layout_row="2"
                    app:srcCompat="@drawable/comodinnegre" />

                <ImageButton
                    android:id="@+id/bttnPlayer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_player_4"
                    app:layout_column="1"
                    app:layout_row="2"
                    app:srcCompat="@drawable/comodinvermell" />

                <ImageButton
                    android:id="@+id/bttnPlayer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_player_1"
                    app:layout_column="0"
                    app:layout_row="1"
                    app:srcCompat="@drawable/comodingroc" />

                <ImageButton
                    android:id="@+id/bttnPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/button_player_2"
                    app:layout_column="1"
                    app:layout_row="1"
                    app:srcCompat="@drawable/comodinblau" />

                <TextView
                    android:id="@+id/txtPlayer1"
                    style="@style/textPlayers"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    app:layout_column="0"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/txtPlayer2"
                    style="@style/textPlayers"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    app:layout_column="1"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/txtPlayer3"
                    style="@style/textPlayers"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    app:layout_column="0"
                    app:layout_row="3" />

                <TextView
                    android:id="@+id/txtPlayer4"
                    style="@style/textPlayers"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    app:layout_column="1"
                    app:layout_row="3" />

            </androidx.gridlayout.widget.GridLayout>

            <TextView
                android:id="@+id/ttxTime1"
                style="@style/time"
                app:layout_constraintBottom_toTopOf="@+id/gridLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txTime2"
                style="@style/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/bttnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

            <Button
                android:id="@+id/bttnEndGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F55C47"
                android:text="@string/end_game"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/bttnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#F55C47"
                android:text="@string/come_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
