<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".login.Login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="224dp"
                android:layout_height="57dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logorummy"
                android:src="@drawable/logorummy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="222dp"
                android:layout_height="62dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logoscrabble"
                android:src="@drawable/logoscrabble"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

            <TextView
                android:id="@+id/textView"
                android:text="@string/please_chose_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/titles" />

            <Spinner
                android:id="@+id/spnnPlayers"
                android:layout_width="211dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>